Update with reviewer feedback

--- a/doc-General_Configuration/topics/RH_Insights.adoc
+++ b/doc-General_Configuration/topics/RH_Insights.adoc
@@ -8,7 +8,8 @@ Red Hat Insights provides an easy to use dashboard that enables system administr
 
 [NOTE]
 ======
-Red Hat Insights is available as a technology preview in this release of {product-title}. For more information on the support scope for features marked as technology previews, see link:https://access.redhat.com/support/offerings/techpreview/[Technology Preview Features Support Scope].
+* To use Red Hat Insights, the {product-title_short} appliance must be registered to Red Hat Subscription Management or Satellite (version 6.1 or newer).
+* Red Hat Insights is available as a technology preview in this release of {product-title}. For more information on the support scope for features marked as technology previews, see link:https://access.redhat.com/support/offerings/techpreview/[Technology Preview Features Support Scope].
 ======
 
 /////////////////////////////////
@@ -18,12 +19,6 @@ Using over 20,000 solutions from Red Hat Certified Engineers, Red Hat Insights d
 
 By spending less time on critical interruptions, your team can focus its resources on the future and achieving your business goals. As budgets for IT tighten, Red Hat Insights acts as a software service to help offload costly and time consuming research periods that can slow down your team.
 /////////////////////////////////
-
-Advantages of Red Hat Insights:
-
-* Proactively solve problems and avoid downtime related to security exploits, performance degradation, and stability failures
-* Feel confident in resolutions founded on 20,000 pieces of knowledge from certified Red Hat engineers
-* Reduces man hours spent researching how to identify and resolve issues as IT budgets shrink
 
 The Red Hat Insights plugin has the following options:
 
