add cloud network files

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Adding_Network_Router.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Adding_Network_Router.adoc
@@ -1,11 +1,11 @@
 [[adding-network-router]]
 
-== Adding a Network Router
+=== Adding a Network Router
 
 Add a network router to an existing cloud network by following the procedure below. 
 
-. Navigate to menu:Networks > Network Routers. 
-. Click image:1847.png(*Configuration*) and click *Add a new Router*. 
+. Navigate to menu:Networks[Network Routers]. 
+. Click image:1847.png[Configuration](*Configuration*) and click *Add a new Router*. 
 . In the *Network Provider* area, select a *Network Manager*.
 . Provide a *Router Name*. 
 . Under *External Gateway*:
