--- a/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_Cloud_Network.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_Cloud_Network.adoc
@@ -1,6 +1,6 @@
 [[adding-a-cloud-network]]
 
-== Adding a Cloud Network
+=== Adding a Cloud Network
 
 
 Add a new cloud network following the steps in this procedure:
