--- a/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_Subnet.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_Subnet.adoc
@@ -1,11 +1,11 @@
 [[adding-a-subnet]]
 
-== Adding a Subnet
+=== Adding a Subnet
 
 Add a subnet to an existing cloud network following the procedure below. 
 
-. Navigate to menu:Networks > Subnets.
-. Click image:1847.png(Configuration) and click *Add a new Cloud Subnet*.
+. Navigate to menu:Networks[Subnets].
+. Click image:1847.png[Configuration](*Configuration*), then click *Add a new Cloud Subnet*.
 . Select a *Network Manager*.
 . Under *Placement*, select a *Cloud Tenant*. 
 . Provide the following *Cloud Subnet* details:
@@ -21,3 +21,4 @@ Determine the address by calculating the number of bits masked in the subnet mas
 ====
 +
 .Click *Add*. 
+
