--- a/doc-Managing_Infrastructure_and_Inventory/topics/Security_Groups.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Security_Groups.adoc
@@ -6,10 +6,14 @@ Security groups can be created and assigned to instances using {product-title} i
 
 Cloud providers that currently support this function include: Amazon EC2, OpenStack, and Red Hat Enterprise Virtualization. 
 
-include:: Adding_a_Security_Group.adoc[]
+include::Adding_a_Security_Group.adoc[]
+
+include::Editing_a_Security_Group.adoc[]
 
 include::Viewing_Security_Groups.adoc[]
 
 include::Tagging_Security_Groups.adoc[]
+
+include::Deleting_a_Security_Group.adoc[]
 
 
