--- a/doc-Managing_Infrastructure_and_Inventory/topics/Subnets.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Subnets.adoc
@@ -1,8 +1,19 @@
 [[subnets]]
 
-== Administering Subnets
+== Creating and Administering Subnets
 
-{product-title} enables creating and administration of Subnets for your cloud networks. Subnets are the means by which instances are granted network connectivity. Each instance is assigned to a subnet as part of the instance creation process, therefore it’s important to consider proper placement of instances to best accommodate their connectivity requirements. Subnets are created in pre-existing networks. Remember that tenant networks in OpenStack Networking can host multiple subnets. This is useful if you intend to host distinctly different systems in the same network, and would prefer a measure of isolation between them. For example, you can designate that only webserver traffic is present on one subnet, while database traffic traverse another. Subnets are isolated from each other, and any instance that wishes to communicate with another subnet must have their traffic directed by a router. Consider placing systems that will require a high volume of traffic amongst themselves in the same subnet, so that they don’t require routing, and avoid the subsequent latency and load. When creating networks, it is important to know that networks can host multiple subnets. This is useful if you intend to host distinctly different systems in the same network, and would prefer a measure of isolation between them. For example, you can designate that only webserver traffic is present on one subnet, while database traffic traverse another. Subnets are isolated from each other, and any instance that wishes to communicate with another subnet must have their traffic directed by a router. Consider placing systems that will require a high volume of traffic amongst themselves in the same subnet, so that they don’t require routing, and avoid the subsequent latency and load.
+{product-title} enables creation and administration of subnets for your cloud networks. Create subnets in pre-existing networks as means to grant network connectivity to instances. Subnets are the means by which instances are granted network connectivity. Each instance is assigned to a subnet as part of the instance creation process.  
+
+Consider proper placement of instances to best accommodate their connectivity requirements:
+
+* Tenant networks in OpenStack Networking can host multiple subnets.
+* Subnets are isolated from one another. 
+* Host distinctly different systems on different subnets within the same network. 
+* Instances on one subnet that wish to communicate with another subnet must have traffic directed by a router. 
+* Place systems requiring a high volume of traffic amongst themselves in the same subnet, avoiding routing and subsequent latency and load issues.
 
 include::Adding_a_Subnet.adoc[]
+
+include::Editing_a_Subnet.adoc[]
+
 
