--- a/doc-Managing_Infrastructure_and_Inventory/topics/Adding_Floating_IPs.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Adding_Floating_IPs.adoc
@@ -1,14 +1,16 @@
 [[adding-floating-ips]]
 === Adding Floating IPs. 
 
-Floating IP addresses allow you to direct ingress network traffic to your instances. Add floating IP addresses to an existing cloud network by following the procedure below.
+Floating IP addresses allow you to direct ingress network traffic to your instances. 
 
-. Navigate to menu:Networks > Floating IPs. 
-. Click image:1847.png(*Configuration*) and click Add a new Floating IP.
+Add floating IP addresses to an existing cloud network by following the procedure below.
+
+. Navigate to menu:Networks[Floating IPs]. 
+. Click image:1847.png[COnfiguration](*Configuration*) and click Add a new Floating IP.
 . Select a *Network Manager*. 
 . Choose an *External Network*
 . Under *Association Information* provide the following:
-.. (Optional) An*Associated Port* for the floating IP. 
+.. (Optional) An *Associated Port* for the floating IP. 
 .. (Optional) The *Floating IP Address*. 
 . Select a *Cloud Tenant*.
 . Click *Add*. 
