--- a/doc-Managing_Infrastructure_and_Inventory/topics/Floating_IPs.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Floating_IPs.adoc
@@ -2,11 +2,17 @@
 
 == Creating Floating IPs
 
-Floating IP addresses allow you to direct ingress network traffic to your cloud network instances. You begin by defining a pool of validly routable external IP addresses, which can then be dynamically assigned to an instance. OpenStack Networking then knows to route all incoming traffic destined for that floating IP to the instance to which it has been assigned.
+Floating IP addresses allow you to direct ingress network traffic to your cloud network instances. Define a pool of validly routable external IP addresses, which can then be dynamically assigned to an instance. All incoming traffic destined for that floating IP is routed to the instance to which it has been assigned.
 
 [NOTE]
 ====
-Red Hat OpenStack Networking allocates floating IP addresses to all projects (tenants) from the same IP ranges/CIDRs. Meaning that every subnet of floating IPs is consumable by any and all projects. You can manage this behavior using quotas for specific projects.
+Red Hat OpenStack Networking allocates floating IP addresses to all projects (tenants) from the same IP ranges/CIDRs. As a result, every subnet of floating IPs is consumable by any and all projects. Manage this behavior using quotas for specific projects.
 ====
 
 include::Adding_Floating_IPs.adoc[]
+
+include::Editing_a_Floating_IP.adoc[]
+
+include::Deleting_a_FloatingIP.adoc[]
+
+
