edit step with note about third party cert

--- a/doc-Appliance_Hardening_Guide/topics/DB_SSL.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/DB_SSL.adoc
@@ -59,12 +59,8 @@ If you are using a self-signed certificate, run:
 [root@appliance2 ~]# install -m 644 -o postgres -g postgres /var/www/miq/vmdb/certs/server.cer /var/www/miq/vmdb/certs/root.crt
 ----
 +
-If you are using a third-party certificate, install the root certificate by running:
-+ 
-[subs="verbatim,attributes"]
-----
-[root@appliance2 ~]# COMMAND NEEDED
-----
+If you are using a third-party certificate, edit this command to install your root certificate.
++
 . Make sure that the security context is set correctly for the files in `/var/www/miq/certs`:
 +
 [subs="verbatim,attributes"]
