add new events to guide

--- a/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
@@ -45,6 +45,9 @@ checking of a condition.
 [cols=",",options="header",]
 |====
 |Event |Description
+
+|Container Image Analysis Request |NEEDINFO.
+
 |Container Image Analysis Complete |Check the condition when an analysis of a container image completes.
 
 |Container Image Discovered |Check the condition when a new container image is discovered.
@@ -75,6 +78,24 @@ checking of a condition.
 
 |Container Node Compliance Failed |Check the condition when a node fails a compliance check.
 
+|Pod Compliance Check |Check the condition when a compliance check is performed on a pod.
+
+|Pod Compliance Passed |Check the condition when a pod passes a compliance check.
+
+|Pod Compliance Failed |Check the condition when a pod fails a compliance check.
+
+|Pod Container Created | NEEDINFO.
+
+|Pod Container Failed | NEEDINFO.
+
+|Pod Container Killing  | NEEDINFO.
+
+|Pod Container Started | NEEDINFO.
+
+|Pod Container Stopped | NEEDINFO.
+
+|Pod Container Unhealthy | NEEDINFO.
+
 |Pod Deadline Exceeded |Check the condition when a pod with specified deadline exceeds it and is terminated.
 
 |Pod Failed Scheduling |Check the condition when scheduling a pod fails.
@@ -95,12 +116,6 @@ checking of a condition.
 
 |Pod Scheduled |Check the condition when a pod is scheduled onto the node.
 
-|Pod Compliance Check |Check the condition when a compliance check is performed on a pod.
-
-|Pod Compliance Passed |Check the condition when a pod passes a compliance check.
-
-|Pod Compliance Failed |Check the condition when a pod fails a compliance check.
-
 |Replicator Failed Creating Pod |Check the condition when a replicator fails creating a pod.
 
 |Replicator Successfully Created Pod |Check the condition when a replicator successfully creates a pod.
@@ -111,8 +126,10 @@ checking of a condition.
 
 |Replicator Compliance Failed |Check the condition when a replicator fails a compliance check.
 
+|Database Failover Executed |NEEDINFO.
+
 |Datastore Analysis Complete |Check the condition when a SmartState
-Analysis of datastore completes.
+Analysis of a datastore completes.
 
 |Datastore Analysis Request |Check the condition when a SmartState
 Analysis for a datastore is requested from the user interface.
@@ -162,8 +179,39 @@ compliance check.
 |Host Disconnect |Check the condition when a host disconnects from a
 provider.
 
+|Host Maintenance Enter Request |NEEDINFO.
+
+|Host Maintenance Exit Request  |NEEDINFO.
+
+|Host Provision Complete |NEEDINFO.
+
+|Host Reboot Request |NEEDINFO.
+
 |Host Removed from Cluster |Check the condition when a host is removed
 from a cluster.
+
+|Host Reset Request |NEEDINFO.
+
+|Host Shutdown Request |NEEDINFO.
+
+|Host Standby Request |NEEDINFO.
+
+|Host Start Request |NEEDINFO.
+
+|Host Stop Request |NEEDINFO.
+
+|Host Vmotion Disable Request |NEEDINFO.
+
+|Host Vmotion Enable Request |NEEDINFO.
+
+|Orchestration Stack Retire Request |NEEDINFO.
+
+|Physical Server Reset |NEEDINFO.
+
+|Physical Server Shutdown |NEEDINFO.
+
+|Physical Server Start |NEEDINFO.
+
 
 |Provider Auth Changed |_For use only with {product-title}
 automate, for future use in policies._ Check the condition when provider
@@ -200,6 +248,8 @@ compliance check.
 
 |Service Provision Complete |Check the condition when the service
 provision is complete.
+
+|Service Retire Request | NEEDINFO.
 
 |Service Retired |Check the condition when the service has been retired.
 
