Added a procedure to create a service dialog from container template; added a note about its requirement before creating a container template catalog item.

--- a/common/create-container-template-catalog-item.adoc
+++ b/common/create-container-template-catalog-item.adoc
@@ -1,20 +1,18 @@
 [NOTE]
 ====
-Before adding a new catalog item for container template provisioning, create a service dialog from container template. To do so, navigate to menu:Compute[Containers > Container Templates] and select the template for provisioning. Then, click image:1847.png[](*Configuration*), then image:1862.png[](*Create Service Dialog from Container Template*). You can use this service dialog when creating the container template catalog item.
+Before adding a new catalog item for container template provisioning, create a service dialog from a container template, see xref:creating-a-service-dialog-from-container-template[].
 ====
 
-Use the following procedure to create a Container Template catalog item.
+Complete the following procedure to create an OpenShift Template catalog item.
 
 . Navigate to menu:Services[Catalogs], then click on the *Catalog Items* accordion. 
 . Click image:1847.png[](*Configuration*), then image:1862.png[](*Add a New Catalog Item*).
-. Select *Container Template* from the *Catalog Item Type* list.
-. Enter the basic details in the *Basic Info* tab:
-.. Enter a *Name* and *Description* for the new service catalog item.
-.. Select *Display in Catalog*.
-.. Select the appropriate catalog from the *Catalog* list.
-.. Select the appropriate service dialog from the *Dialog* list.
-.. Select your provider from the *Provider* list.
-.. Select the *Container Template* from the list.
+. Select *OpenShift Template* from the *Catalog Item Type* list.
+. Enter a *Name* and *Description* for the new service catalog item. Select *Display in Catalog*.
+. Select the appropriate catalog from the *Catalog* list.
+. From the *Dialog list*, select the service dialog you have created from a container template.
+. Select your provider from the *Provider* list.
+. Set the *Provisioning Entry Point*.
 . Click *Add*.
 
 
