--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -59,6 +59,18 @@ When creating a service dialog for use with Ansible playbook catalog items, vari
 
 include::common/service-dialog-creation-using-dialog-editor.adoc[]
 
+[[creating-a-service-dialog-from-container-template]]
+===== Creating a Service Dialog from a Container Template
+
+Complete the following procedure to create a Service Dialog from a Container Template.
+
+. Navigate to menu:Compute[Containers > Container Templates] and select the template for provisioning. 
+. Click image:1847.png[](*Configuration*), then image:1862.png[](*Create Service Dialog from Container Template*).
+. Enter a name for the dialog in *Service Dialog Name*.
+. Click *Save*.
+
+You can use this service dialog when creating a catalog item for container template provisioning; see xref:create-container-template-catalog-item[].
+
 [[importing-service-dialogs]]
 ===== Importing Service Dialogs
 
@@ -350,7 +362,7 @@ include::common/create-azure-catalog-item.adoc[]
 
 
 [[create-container-template-catalog-item]]
-==== Creating a Container Template Catalog Item
+==== Creating an OpenShift Template Catalog Item
 
 include::common/create-container-template-catalog-item.adoc[]
 
