--- a/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
@@ -46,7 +46,8 @@ checking of a condition.
 |====
 |Event |Description
 
-|Container Image Analysis Request |NEEDINFO.
+|Container Image Analysis Request |Check the condition when an analysis of a container image
+is requested.
 
 |Container Image Analysis Complete |Check the condition when an analysis of a container image completes.
 
@@ -84,17 +85,17 @@ checking of a condition.
 
 |Pod Compliance Failed |Check the condition when a pod fails a compliance check.
 
-|Pod Container Created | NEEDINFO.
+|Pod Container Created | Check the condition when a container is created in a pod.
 
-|Pod Container Failed | NEEDINFO.
+|Pod Container Failed |Check the condition when a container in a pod fails.
 
-|Pod Container Killing  | NEEDINFO.
+|Pod Container Killing  | Check the condition when a container in a pod is killed.
 
-|Pod Container Started | NEEDINFO.
+|Pod Container Started | Check the condition when a container in a pod is started.
 
-|Pod Container Stopped | NEEDINFO.
+|Pod Container Stopped | Check the condition when a container in a pod is stopped.
 
-|Pod Container Unhealthy | NEEDINFO.
+|Pod Container Unhealthy | Check the condition when a container in a pod is unhealthy.
 
 |Pod Deadline Exceeded |Check the condition when a pod with specified deadline exceeds it and is terminated.
 
@@ -126,7 +127,7 @@ checking of a condition.
 
 |Replicator Compliance Failed |Check the condition when a replicator fails a compliance check.
 
-|Database Failover Executed |NEEDINFO.
+|Database Failover Executed |Check the condition when a database failover is executed.
 
 |Datastore Analysis Complete |Check the condition when a SmartState
 Analysis of a datastore completes.
@@ -141,10 +142,10 @@ cluster.
 of host completes.
 
 |Host Analysis Request |Check the condition when a SmartState Analysis
-is requested from the {product-title} console.
+is requested from the {product-title_short} console.
 
 |Host Auth Changed |Check the condition when host authentication
-credentials are changed in the {product-title} console.
+credentials are changed in the {product-title_short} console.
 
 |Host Auth Error |Check the condition if there is any other error
 connecting to the host such as ssh/vim handshaking problems, timeouts,
@@ -153,13 +154,13 @@ or any other uncategorized error.
 |Host Auth Incomplete Credentials |Check the condition if host
 authentication credentials are not complete in the user interface.
 
-|Host Auth Invalid |Check the condition if {product-title}
+|Host Auth Invalid |Check the condition if {product-title_short}
 is able to communicate with the host and the credentials fail.
 
-|Host Auth Unreachable |Check the condition if {product-title} is unable to communicate with the host.
+|Host Auth Unreachable |Check the condition if {product-title_short} is unable to communicate with the host.
 
 |Host Auth Valid |Check the condition when the host authentication
-credentials entered in the {product-title} console are
+credentials entered in the {product-title_short} console are
 valid.
 
 |Host C & U Processing Complete |Check the condition when the processing
@@ -179,61 +180,75 @@ compliance check.
 |Host Disconnect |Check the condition when a host disconnects from a
 provider.
 
-|Host Maintenance Enter Request |NEEDINFO.
+|Host Maintenance Enter Request |Check the condition when a host requests to
+ enter maintenance mode.
 
-|Host Maintenance Exit Request  |NEEDINFO.
+|Host Maintenance Exit Request  |Check the condition when a host requests to
+ exit maintenance mode.
 
-|Host Provision Complete |NEEDINFO.
+|Host Provision Complete |Check the condition when the host
+provision is complete.
 
-|Host Reboot Request |NEEDINFO.
+|Host Reboot Request |Check the condition when someone tries to
+reboot a host from the {product-title_short} console.
 
 |Host Removed from Cluster |Check the condition when a host is removed
 from a cluster.
 
-|Host Reset Request |NEEDINFO.
+|Host Reset Request |Check the condition when a host is
+restarted from the {product-title_short} console.
 
-|Host Shutdown Request |NEEDINFO.
+|Host Shutdown Request |Check the condition when a host is
+shut down from the {product-title_short} console.
 
-|Host Standby Request |NEEDINFO.
+|Host Standby Request |Check the condition when someone tries to put the
+ operating system of a host in standby from the {product-title_short} console. 
 
-|Host Start Request |NEEDINFO.
+|Host Start Request |Check the condition when a host is
+started from the {product-title_short} console.
 
-|Host Stop Request |NEEDINFO.
+|Host Stop Request |Check the condition when a host is
+requested to stop from the {product-title_short} console.
 
-|Host Vmotion Disable Request |NEEDINFO.
+|Host Vmotion Disable Request |Check the condition when a request to disable
+vMotion on a host is created from the {product-title_short} console.
 
-|Host Vmotion Enable Request |NEEDINFO.
+|Host Vmotion Enable Request |Check the condition when a request to enable
+vMotion on a host is created from the {product-title_short} console.
 
-|Orchestration Stack Retire Request |NEEDINFO.
+|Orchestration Stack Retire Request |Check the condition when an orchestration stack
+retirement request is created from {product-title_short}.
 
-|Physical Server Reset |NEEDINFO.
+|Physical Server Reset |Check the condition when a physical server is
+restarted from the {product-title_short} console.
 
-|Physical Server Shutdown |NEEDINFO.
+|Physical Server Shutdown |Check the condition when a physical server is
+shut down from the {product-title_short} console.
 
-|Physical Server Start |NEEDINFO.
+|Physical Server Start |Check the condition when a physical server is
+started from the {product-title_short} console.
 
-
-|Provider Auth Changed |_For use only with {product-title}
+|Provider Auth Changed |_For use only with {product-title_short}
 automate, for future use in policies._ Check the condition when provider
 authentication credentials are changed in the user interface.
 
-|Provider Auth Error |_For use only with {product-title}
+|Provider Auth Error |_For use only with {product-title_short}
 automate, for future use in policies._ Check the condition if there is
 any other error connecting to the provider such as ssh/vim handshaking
 problems, timeouts, or any other uncategorized error.
 
 |Provider Auth Incomplete Credentials |_For use only with automate, for future use in policies._ Check the
 condition if provider authentication credentials are not complete in the
-{product-title} console.
+{product-title_short} console.
 
-|Provider Auth Invalid |_For use only with {product-title}
-automate, for future use in policies._ Check the condition if {product-title} is able to communicate with the provider and the
+|Provider Auth Invalid |_For use only with {product-title_short}
+automate, for future use in policies._ Check the condition if {product-title_short} is able to communicate with the provider and the
 credentials fail.
 
 |Provider Auth Unreachable |_For use only with automate, for future use in policies._ Check the condition if
-{product-title} is unable to communicate with the provider.
+{product-title_short} is unable to communicate with the provider.
 
-|Provider Auth Valid |_For use only with {product-title}
+|Provider Auth Valid |_For use only with {product-title_short}
 automate, for future use in policies._ Check the condition when the
 provider authentication credentials entered in the user interface are valid.
 
@@ -249,7 +264,8 @@ compliance check.
 |Service Provision Complete |Check the condition when the service
 provision is complete.
 
-|Service Retire Request | NEEDINFO.
+|Service Retire Request | Check the condition when a service
+retirement request is created from {product-title_short}.
 
 |Service Retired |Check the condition when the service has been retired.
 
@@ -319,7 +335,7 @@ virtual machine completes.
 virtual machine fails.
 
 |VM Analysis Request |Check the condition when a SmartState Analysis is
-requested from the {product-title} console.
+requested from the {product-title_short} console.
 
 |VM Analysis Start |Check the condition when a SmartState Analysis of
 virtual machine is started.
@@ -352,7 +368,7 @@ to delete a virtual machine from disk from the user interface.
 rebooted.
 
 |VM Guest Reboot Request |Check the condition when someone tries to
-reboot a virtual machine from the {product-title} console.
+reboot a virtual machine from the {product-title_short} console.
 
 |VM Guest Shutdown |Check the condition when the operating system of a
 virtual machine shuts down.
@@ -360,18 +376,18 @@ virtual machine shuts down.
 |VM Guest Shutdown Request |Check the condition when someone tries to
 shut down the operating system of a virtual machine from the user interface.
 
-|VM Live Migration (VMOTION) |Check the condition when a VMOTION is
+|VM Live Migration (vMotion) |Check the condition when a vMotion migration is
 performed.
 
 |VM Power Off |Check the condition when a virtual machine is turned off.
 
 |VM Power Off Request |Check the condition when someone tries to power
-off a virtual machine from the {product-title} console.
+off a virtual machine from the {product-title_short} console.
 
 |VM Power On |Check the condition when a virtual machine is turned on.
 
 |VM Power On Request |Check the condition when someone tries to turn on
-a virtual machine from the {product-title} console.
+a virtual machine from the {product-title_short} console.
 
 |VM Provision Complete |Check the condition when a virtual machine is
 provisioned.
@@ -383,7 +399,7 @@ is connected to a remote console.
 is unregistered.
 
 |VM Removal from Inventory Request |Check the condition when a request
-is sent from the {product-title} console to unregister a
+is sent from the {product-title_short} console to unregister a
 virtual machine.
 
 |VM Renamed Event |Check the condition when a virtual machine is renamed
@@ -392,10 +408,10 @@ on its provider.
 |VM Reset |Check the condition when a virtual machine is restarted.
 
 |VM Reset Request |Check the condition when a virtual machine is
-restarted from the {product-title} console.
+restarted from the {product-title_short} console.
 
 |VM Retire Request |Check the condition when a virtual machine
-retirement request is created from {product-title}.
+retirement request is created from {product-title_short}.
 
 |VM Retired |Check the condition when a virtual machine is retired.
 
@@ -419,12 +435,12 @@ virtual machine goes to standby.
 
 |VM Standby of Guest Request |Check the condition when someone tries to
 put the operating system of a virtual machine in standby from the
-{product-title} console.
+{product-title_short} console.
 
 |VM Suspend |Check the condition when a virtual machine is suspended.
 
 |VM Suspend Request |Check the condition when someone tries to suspend a
-virtual machine from the {product-title} console.
+virtual machine from the {product-title_short} console.
 
 |VM Template Create Complete |Check the condition when a virtual machine
 template is created.
