added missing event types and a few missed events

--- a/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
@@ -21,6 +21,10 @@ an infrastructure object.
 |Host Operation |Events related to the connection state of a host and
 status of a SmartState Analysis on a host.
 
+|Orchestration Lifecycle |Events such as orchestration lifecycle, such as retirement.
+
+|Physical Server Operation |Events related to the connection state of a physical server.
+
 |VM Configuration |Events associated with a change in configuration of a
 virtual machine. These include, but are not limited to, clone, create,
 template create, and settings change.
@@ -361,6 +365,8 @@ a compliance check.
 |VM Create Complete |Check the condition when a virtual machine is
 created.
 
+|VM Delete (from Disk) |Check the condition when a disk on a virtual machine is deleted.
+
 |VM Delete (from Disk) Request |Check the condition when someone tries
 to delete a virtual machine from disk from the user interface.
 
@@ -376,8 +382,12 @@ virtual machine shuts down.
 |VM Guest Shutdown Request |Check the condition when someone tries to
 shut down the operating system of a virtual machine from the user interface.
 
-|VM Live Migration (vMotion) |Check the condition when a vMotion migration is
+|VM Live Migration (VMOTION) |Check the condition when a vMotion migration is
 performed.
+
+|VM Pause |Check the condition when a virtual machine is paused.
+
+|VM Pause Request |Check the condition when someone tries to pause a virtual machine from the {product-title_short} console.
 
 |VM Power Off |Check the condition when a virtual machine is turned off.
 
@@ -410,6 +420,8 @@ on its provider.
 |VM Reset Request |Check the condition when a virtual machine is
 restarted from the {product-title_short} console.
 
+|VM Resume |Check the condition when a virtual machine is resumed.
+
 |VM Retire Request |Check the condition when a virtual machine
 retirement request is created from {product-title_short}.
 
@@ -420,6 +432,15 @@ reached for retirement.
 
 |VM Settings Change |Check the condition when the settings of virtual
 machine are changed.
+
+|VM Shelve |Check the condition when a virtual machine is shelved.
+
+|VM Shelve Offload |Check the condition when a virtual machine is removed and deleted with the shelve offload operation.
+
+|VM Shelve Offload Request |Check the condition when a shelve offload request is created from {product-title_short} for a virtual machine.
+
+|VM Shelve Request |Check the condition when a virtual machine
+shelve request is created from {product-title_short}.
 
 |VM Snapshot Create Complete |Check the condition when a snapshot is
 completed.
