--- a/common/create-container-template-catalog-item.adoc
+++ b/common/create-container-template-catalog-item.adoc
@@ -1,6 +1,6 @@
 [NOTE]
 ====
-Before adding a new catalog item for container template provisioning, create a service dialog from a container template, see xref:creating-a-service-dialog-from-container-template[].
+Before adding a new catalog item for container template provisioning, create a service dialog from a container template. See xref:creating-a-service-dialog-from-container-template[] for details.
 ====
 
 Complete the following procedure to create an OpenShift Template catalog item.
