Added a section about power operations on VM. Also made few other changes along the way.

--- a/doc-Introduction_to_Self_Service_Portal/topics/Dashboard_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/Dashboard_Tab.adoc
@@ -1,6 +1,6 @@
 [[dashboard-tab]]
 
-== The Dashboard Tab
+== Dashboard Tab
 
 Once you log in to the Self Service user interface, you will see the dashboard screen by default. The *Dashboard* tab provides a quick summary of the services available, requests made, and their statuses as below:
 
