--- a/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
@@ -1,16 +1,20 @@
 [[my-services-tab]]
 
-== The My Services Tab
+== My Services Tab
 
-The *My Services* tab lists all available services with a summary of information associated with each service, including the *Service Name*, its current *Power State* represented by an icon, *Number of VMs*, *Owner*, date *Created*, and *Retires* date. Additionally, you can see the chargeback cost per service for a virtual machine's month-to-date usage. You can filter or sort services by those entities, and by *Relative Cost*. 
+The *My Services* tab lists all service requests individually with a summary of information associated with each service, including the *Service Name*, its current *Power State* represented by an icon, *Number of VMs*, *Owner*, date *Created*, and *Retires* date. Additionally, you can see the chargeback cost per service for a virtual machine's month-to-date usage. You can filter or sort services by those entities, and by *Relative Cost*. 
 
-On the same screen, you have the option to edit the service name and description, edit tags, set ownership, retire the service now or at a later date, or remove the service. You can also perform power operations on virtual machines by clicking more options _(represented by three dots)_ next to the service.
+On the same screen, you have the option to edit the service name and description, edit tags, set ownership, retire the service now or at a later date, or remove the service by click more options _(represented by three dots)_ next to the service. You also have options to perform power operations, that is start, stop, or suspend, at the service level. 
+
+You can perform most of the above tasks in bulk (except editing service details and power operations). To do so, select multiple services and then click the designated button for the required task on the upper right corner of the screen.    
 
 image:sui-services.png[]
 
-You can perform most of these tasks in bulk (except editing service details and power operations). In order to do so, select multiple services and then click the designated button for the required task on the upper right corner of the screen. 
+Click on a service to see more details, including information about associated virtual machines and snapshots under *Resources*, and associated parent catalog item under *Relationships*. You can click more options _(represented by three dots)_ to perform power operations at the resource level, or you can click *View Details* (or on the virtual machine name) to see more information about the resource, including compliance, retirement, timeline of power events, utilization, Smart State analysis, disk usage, and *Power Operations*. 
 
-Click on a service to view more details, including information about associated virtual machines and snapshots, and its relationship data. Additionally, under *Resources*, you can click on a virtual machine's name to see its properties, and perform power operations at the resource level. Click on *Snapshots* or the camera image:sui-camera-icon.png[camera icon] icon to go to the snapshots page to see a list of available snapshots, as well as create or delete snapshots via the *Configuration* button. A snapshot is a copy of the virtual machine's disk file (VMDK) that captures the entire state of the virtual machine at a point in time. Use *Revert* under more options _(represented by three dots)_ to return a virtual machine to a previous state when you took the snapshot.
+Click *Snapshots* to view available snapshots, or create or delete snapshots via the *Configuration* button on the next screen. A snapshot is a copy of the virtual machine's disk file (VMDK) that captures the entire state of the virtual machine at a point in time. 
+
+// Use *Revert* under more options _(represented by three dots)_ to return a virtual machine to a previous state when you took the snapshot.
 
 [[html5-console]]
 === Accessing the HTML5 Console
@@ -102,3 +106,14 @@ You can open the Cockpit console for a virtual machine from the image:ssui-acces
 image:cockpit-login-nb.png[Cockpit Login]
 . Once you have logged in, you will see the tabs for the dashboard and the individual machines added to Cockpit. 
 image:cockpit-ui-nb.png[Cockpit UI]
+
+[[vm-power-operations]]
+=== Power Operating the Virtual Machine
+
+Follow this procedure to perform power operations on virtual machines, that is start, stop, or suspend, depending on the current state of the virtual machine. 
+
+. From the *Services* screen, click on the required service.
+. Under *Resources*, click more options _(represented by three dots)_ where you have the option to start, stop, or suspend the virtual machine.
+. Alternatively, click on the virtual machine name to see more details about the resource, including the *Power Operations* button. 
+
+
