Update Automattion Providers

--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -104,7 +104,11 @@ If both {product-title_short} and a VMware provider are located in the same IPv6
 . Select the *Credential Type*. Additional fields will appear depending on the type chosen.
 . Click *Add*.
 
+:leveloffset: 3
+include::Ansible_Credentials.adoc[]
 
+:leveloffset: 3
+include::Optimizing_Playbooks.adoc[]
 
 [[ansible-tower]]
 == Ansible Tower
