created new repo for new guide Managing Authentication (content pulled from General Configuration to make it more accessible and findable, and edited); removed authentication section from General Config guide and added linked (conditionalized for miq and cfme) text and notes pointing to the Managing Auth guide where appropriate

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -738,6 +738,13 @@ See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-si
 ====
 endif::cfme[]
 
+ifdef::miq[]
+[NOTE]
+====
+See the _Managing Authentication_ guide for information on configuring different types of authentication for {product-title_short}.
+====
+endif::miq[]
+
 
 [[changing-authentication-settings]]
 ====== Changing Authentication Settings
@@ -2094,6 +2101,9 @@ image:available_groups.png[]
 ifdef::cfme[]
 * For more information on configuring LDAP authentication in {product-title_short}, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_authentication_for_cloudforms/#ldap_config[Configuring LDAP or LDAPS Authentication] in _Managing Authentication_.
 endif::cfme[]
+ifdef::miq[]
+For more information on configuring LDAP authentication in {product-title_short}, see _Configuring LDAP or LDAPS Authentication_ in _Managing Authentication_.
+endif::miq[]
 ====
 +
 . Select one or more groups from *Available Groups*.
@@ -2125,6 +2135,13 @@ ifdef::cfme[]
 See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_authentication_for_cloudforms/#assigning_account_roles_using_ldap_groups[Assigning CloudForms Account Roles Using LDAP Groups] in _Managing Authentication_.
 ====
 endif::cfme[]
+
+ifdef::miq[]
+[NOTE]
+====
+See _Assigning CloudForms Account Roles Using LDAP Groups_ in _Managing Authentication_.
+====
+endif::miq[]
 
 [[creating-a-user-group]]
 ==== Creating a Group
@@ -2168,6 +2185,9 @@ If you have enabled *Get Role from LDAP* under *LDAP Settings*, then the role is
 ifdef::cfme[]
 See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_authentication_for_cloudforms/#ldap_config[Configuring LDAP or LDAPS Authentication] in _Managing Authentication_.
 endif::cfme[]
+ifdef::miq[]
+See _Configuring LDAP or LDAPS Authentication_ in _Managing Authentication_.
+endif::miq[]
 ====
 
 To view details of a role and its level of access:
