--- a/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
@@ -10,7 +10,7 @@ You can perform most of the above tasks in bulk (except editing service details 
 
 image:sui-services.png[]
 
-Click on a service to see more details, including information about associated virtual machines and snapshots under *Resources*, and associated parent catalog item under *Relationships*. You can click more options _(represented by three dots)_ to perform power operations at the resource level, or you can click *View Details* (or on the virtual machine name) to see more information about the resource, including compliance, retirement, timeline of power events, utilization, Smart State analysis, disk usage, and *Power Operations*. 
+Click on a service to see more details, including information about associated virtual machines and snapshots under *Resources*, and associated parent catalog item under *Relationships*. You can click more options _(represented by three dots)_ to perform power operations at the resource level, or you can click *View Details* (or on the virtual machine name) to see more information about the resource, including compliance, retirement, timeline of power events, utilization, Smart State analysis, disk usage, and power operations. 
 
 Click *Snapshots* to view available snapshots, or create or delete snapshots via the *Configuration* button on the next screen. A snapshot is a copy of the virtual machine's disk file (VMDK) that captures the entire state of the virtual machine at a point in time. 
 
@@ -108,12 +108,11 @@ image:cockpit-login-nb.png[Cockpit Login]
 image:cockpit-ui-nb.png[Cockpit UI]
 
 [[vm-power-operations]]
-=== Power Operating the Virtual Machine
+=== Controling Virtual Machine Power States
 
-Follow this procedure to perform power operations on virtual machines, that is start, stop, or suspend, depending on the current state of the virtual machine. 
+Follow this procedure to perform power operations on virtual machines, such as start, stop, or suspend, depending on the current state of the virtual machine. 
 
 . From the *Services* screen, click on the required service.
-. Under *Resources*, click more options _(represented by three dots)_ where you have the option to start, stop, or suspend the virtual machine.
-. Alternatively, click on the virtual machine name to see more details about the resource, including the *Power Operations* button. 
+. Under *Resources*, click more options _(represented by three dots)_ where you have the option to start, stop, or suspend the virtual machine. Alternatively, click on the virtual machine name to see more details about the resource, including the *Power Operations* button.
 
 
