Added missing letter

--- a/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
@@ -108,7 +108,7 @@ image:cockpit-login-nb.png[Cockpit Login]
 image:cockpit-ui-nb.png[Cockpit UI]
 
 [[vm-power-operations]]
-=== Controling Virtual Machine Power States
+=== Controlling Virtual Machine Power States
 
 Follow this procedure to perform power operations on virtual machines, such as start, stop, or suspend, depending on the current state of the virtual machine. 
 
