Minor edit to match the UI

--- a/doc-Managing_Providers/topics/Adding_Amazon_EC2_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_Amazon_EC2_Providers.adoc
@@ -7,7 +7,7 @@ Complete the following procedure to add an Amazon EC2 cloud provider in {product
 . Click  image:1847.png[] (*Configuration*), then click  image:1862.png[] (*Add a New Cloud Provider*).
 . Enter a *Name* for the provider.
 . From the *Type* list, select *Amazon EC2*. 
-. Select an *Amazon Region*.
+. Select a *Region*.
 . Select the appropriate *Zone* if you have more than one available.
 . Under *Endpoints*, click the *Default* tab.
 .. Generate an *Access Key* in the *Security Credentials* of your Amazon AWS account.
