--- a/common/configuration.adoc
+++ b/common/configuration.adoc
@@ -36,6 +36,7 @@ The {product-title} appliance console automatically logs out after five minutes 
 
 include::configuration-advanced.adoc[]
 
+ifdef::cfme[]
 [[configuring_a_database]]
 === Configuring a Database for {product-title}
 
@@ -92,6 +93,7 @@ All {product-title_short} appliances in a multi-region deployment must use the s
 . Confirm the configuration if prompted.
 
 {product-title} will then configure the external database.
+endif::cfme[]
 
 [[configuring-a-worker-appliance]]
 === Configuring a Worker Appliance
