Conditionalize configuration section

--- a/common/configuration.adoc
+++ b/common/configuration.adoc
@@ -36,6 +36,8 @@ The {product-title} appliance console automatically logs out after five minutes 
 
 include::configuration-advanced.adoc[]
 
+
+ifdef::cfme[]
 [[configuring_a_database]]
 === Configuring a Database for {product-title}
 
@@ -88,6 +90,7 @@ endif::ssh[]
 . Confirm the configuration if prompted.
 
 {product-title} will then configure the external database.
+endif::cfme[]
 
 [[configuring-a-worker-appliance]]
 === Configuring a Worker Appliance
