Conditionalize configuration of database

--- a/common/configuration.adoc
+++ b/common/configuration.adoc
@@ -55,6 +55,7 @@ A valid fully qualified hostname for the {product-title} appliance is required f
 * Use *Summary Information* to go back to the network summary screen for the {product-title} appliance.
 * Use *Quit* to leave the {product-title} appliance console.
 
+ifdef::cfme[]
 [[configuring_a_database]]
 === Configuring a Database for {product-title}
 
@@ -135,6 +136,7 @@ necessary to alter the `max_connections` setting.
 . Confirm the configuration if prompted.
 
 {product-title} will then configure the external database.
+endif::cfme[]
 
 [[configuring-a-worker-appliance]]
 === Configuring a Worker Appliance
