Edits from peer review feedback

--- a/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
@@ -21,7 +21,7 @@ an infrastructure object.
 |Host Operation |Events related to the connection state of a host and
 status of a SmartState Analysis on a host.
 
-|Orchestration Lifecycle |Events such as orchestration lifecycle, such as retirement.
+|Orchestration Lifecycle |Events related to orchestration lifecycle, such as retirement.
 
 |Physical Server Operation |Events related to the connection state of a physical server.
 
@@ -241,7 +241,7 @@ automate, for future use in policies._ Check the condition if there is
 any other error connecting to the provider such as ssh/vim handshaking
 problems, timeouts, or any other uncategorized error.
 
-|Provider Auth Incomplete Credentials |_For use only with automate, for future use in policies._ Check the
+|Provider Auth Incomplete Credentials |_For use only with {product-title_short} automate, for future use in policies._ Check the
 condition if provider authentication credentials are not complete in the
 {product-title_short} console.
 
@@ -249,7 +249,7 @@ condition if provider authentication credentials are not complete in the
 automate, for future use in policies._ Check the condition if {product-title_short} is able to communicate with the provider and the
 credentials fail.
 
-|Provider Auth Unreachable |_For use only with automate, for future use in policies._ Check the condition if
+|Provider Auth Unreachable |_For use only with {product-title_short} automate, for future use in policies._ Check the condition if
 {product-title_short} is unable to communicate with the provider.
 
 |Provider Auth Valid |_For use only with {product-title_short}
