Minor edit for better readability.

--- a/doc-REST_API/topics/provision_attributes.adoc
+++ b/doc-REST_API/topics/provision_attributes.adoc
@@ -210,7 +210,7 @@ provide *additional_values* and allow customization methods to use these attribu
 | new_datastore_fs_type | string | FS Type | NFS, VMFS | NFS
 | rp_filter | integer | Filter | |
 | new_datastore_thin_provision | string | Thin provision | |
-| placement_auto | boolean | Choose automatically | | false *NOTE*: placement_auto defaults to `true` for requests made from the API or {product-title_short} Automate.
+| placement_auto | boolean | Choose automatically | | false (*NOTE*: placement_auto defaults to `true` for requests made from the API or {product-title_short} Automate.)
 | new_datastore_size | integer | Size (GB) | |
 | new_datastore_autogrow | string | Autogrow | | false
 | placement_folder_name | integer | Name | |
